--- a/gestao/templates/admin_custom/form_emissor_parceiro.html
+++ b/gestao/templates/admin_custom/form_emissor_parceiro.html
@@ -15,6 +15,11 @@
         {{ form.nome }}
     </div>
     <div class="form-group single">
+        <label class="form-label" for="{{ form.usuario.id_for_label }}">Usuário vinculado</label>
+        {{ form.usuario }}
+        <p class="helper-text">Defina o usuário que acessará a sessão do parceiro.</p>
+    </div>
+    <div class="form-group single">
         <label class="form-label" for="{{ form.programas.id_for_label }}">Programas de fidelidade</label>
         {{ form.programas }}
         <p class="helper-text">Selecione os programas disponíveis para a empresa.</p>
